feat: make org-level reporters configurable
AM-3267